--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-loader": "^0.8.0",
     "precss": "^1.4.0",
     "react-hot-loader": "^1.3.0",
+    "redux-logger": "^2.8.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.12",
     "webpack-dev-middleware": "^1.5.1",
