--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
-    "redux": "^3.0.6"
+    "redux": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
